--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -137,6 +137,14 @@ jobs:
           kubectl get po
           POD=$(kubectl get pod -l app=source-harness -o jsonpath="{.items[0].metadata.name}")
           echo "pod name is $POD"
+          kubectl get po
+          kubectl get po
+          kubectl get po
+          kubectl get po
+          kubectl get po
+          kubectl get po
+          kubectl get po
+          kubectl get po
           kubectl wait --for=condition=Ready --timeout=30s "pod/$POD"
           kubectl logs --follow $POD
           echo "reading end of log"
