--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -137,7 +137,9 @@ jobs:
           kubectl get po
           POD=$(kubectl get pod -l app=source-harness -o jsonpath="{.items[0].metadata.name}")
           echo "pod name is $POD"
-          kubectl wait --for=condition=Ready --timeout=90s "pod/$POD"
+          sleep 3
+          kubectl logs $POD
+          kubectl wait --for=condition=Ready --timeout=20s "pod/$POD"
           kubectl logs --follow $POD
           echo "reading end of log"
           kubectl logs --tail=5 $POD
