Feat pick channel (#6)
* feat: 动态配置channels

* feat:新增channel ids 参数

---------

Co-authored-by: Jakin <iOSLiuYong2012@163.com>

--- a/airbyte-integrations/connectors/source-discord/source_discord/spec.yaml
+++ b/airbyte-integrations/connectors/source-discord/source_discord/spec.yaml
@@ -29,7 +29,10 @@ connectionSpecification:
       title: Guild Name
       default: "default"
       description: The Name of the target guild (also known as Server Name)
-#    channel_ids:
-#      type: string
+    channel_ids:
+      type: string
+      title: channel id
+      description: The channel that needs to be obtained. If more than one please use "," splicing
+      default: ""
 #    initial_timestamp:
 #      type: string
