--- a/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
@@ -5,6 +5,8 @@ acceptance_tests:
   spec:
     tests:
       - spec_path: "source_trello/spec.json"
+        backward_compatibility_tests_config:
+          disable_for_version: 0.2.0
   connection:
     tests:
       - config_path: "secrets/config.json"
