expected_records.jsonl added
Signed-off-by: Sergey Chvalyuk <grubberr@gmail.com>

--- a/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
@@ -1,6 +1,7 @@
 # See [Connector Acceptance Tests](https://docs.airbyte.com/connector-development/testing-connectors/connector-acceptance-tests-reference)
 # for more information about how to configure these tests
 connector_image: airbyte/source-trello:dev
+test_strictness_level: "high"
 acceptance_tests:
   spec:
     tests:
@@ -23,6 +24,11 @@ acceptance_tests:
   basic_read:
     tests:
       - config_path: "secrets/config.json"
+        expect_records:
+          path: "integration_tests/expected_records.jsonl"
+          extra_fields: no
+          exact_order: no
+          extra_records: yes
         empty_streams: []
   incremental:
     tests:
