--- a/airbyte-integrations/connectors/destination-xata/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/destination-xata/sample_files/configured_catalog.json
@@ -7,16 +7,7 @@
                 "supported_sync_modes": ["full_refresh"]
             },
             "sync_mode": "full_refresh",
-            "destination_sync_mode": "overwrite"
-        },
-        {
-            "stream": {
-                "name": "comments",
-                "json_schema": {},
-                "supported_sync_modes": ["full_refresh"]
-            },
-            "sync_mode": "full_refresh",
-            "destination_sync_mode": "overwrite"
+            "destination_sync_mode": "append"
         }
     ]
 }
