--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -135,6 +135,8 @@ jobs:
           kubectl create -f ./tools/bin/test-postgres-source-process.yaml
           echo "get pods..."
           kubectl get po
+          pwd
+          ls
           POD=$(kubectl get pod -l app=source-harness -o jsonpath="{.items[0].metadata.name}")
           echo "pod name is $POD"
           sleep 3
