--- a/.env.prod
+++ b/.env.prod
@@ -10,7 +10,7 @@
 
 
 ### SHARED ###
-VERSION=0.40.28
+VERSION=0.42.0
 
 # When using the airbyte-db via default docker image
 CONFIG_ROOT=/data
@@ -97,6 +97,8 @@ MAX_CHECK_WORKERS=5
 MAX_DISCOVER_WORKERS=5
 MAX_NOTIFY_WORKERS=5
 SHOULD_RUN_NOTIFY_WORKFLOWS=false
+TEMPORAL_HISTORY_RETENTION_IN_DAYS=4
+
 # Temporal Activity configuration
 ACTIVITY_MAX_ATTEMPT=
 ACTIVITY_INITIAL_DELAY_BETWEEN_ATTEMPTS_SECONDS=
