--- a/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
+++ b/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
@@ -535,8 +535,134 @@ streams:
     incremental_sync:
       type: DatetimeBasedCursor
       cursor_field: endretDato
-      datetime_format: '%Y-%m-%dT%H:%M:%SZ'
+      datetime_format: '%Y-%m-%dT%H:%M:%S.%f'
       cursor_granularity: PT1S
-      end_datetime: '{{ config[''end_date''] }}'
+      end_datetime: '{{ config[''end_date''] if config[''end_date'']|length else now_utc().strftime("%Y-%m-%dT%H:%M:%S.%f") }}'
       start_datetime: '{{ config[''start_date''] }}'
       step: P1D
+  - type: DeclarativeStream
+    name: arbeidstyper
+    primary_key:
+      - ArbeidsartNr
+    schema_loader:
+      type: InlineSchemaLoader
+      schema:
+        $schema: http://json-schema.org/schema#
+        properties:
+          AktiverSporsmal:
+            type: boolean
+          ArbeidsartNavn:
+            type: string
+          ArbeidsartNr:
+            type: string
+          ArtTypeNr:
+            type: string
+          ArtTypeNr2:
+            type: string
+          ArtTypeNr3:
+            type: string
+          AskForEndTime:
+            type: boolean
+          Avd:
+            type: string
+          AvrundFAntall:
+            type: integer
+          AvrundFAntallTil:
+            type: integer
+          BarStyle:
+            type: integer
+          FastTekst:
+            type: 'null'
+          Forvalg:
+            type: integer
+          FraKlokken:
+            type: string
+          Fri:
+            type: boolean
+          FromNextday:
+            type: boolean
+          FyllTommeDager:
+            type: boolean
+          KortNavn:
+            type: string
+          Kostkonto:
+            type: 'null'
+          Notat:
+            type: 'null'
+          OppdaterBmTidVedEndring:
+            type: boolean
+          OverMidnatt:
+            type: integer
+          PrisPrEnhet:
+            type: number
+          Produktiv:
+            type: boolean
+          RegLor:
+            type: boolean
+          RegSon:
+            type: boolean
+          RestOfDayAndNext:
+            type: boolean
+          Sats1:
+            type: number
+          Sats2:
+            type: number
+          SistEndretAv:
+            type: integer
+          SistEndretDato:
+            type: string
+          Sporsmal:
+            type: 'null'
+          Standard:
+            type: boolean
+          TaMedIKalkyle:
+            type: boolean
+          TilKlokken:
+            type: string
+          TilbakeDato:
+            type: boolean
+          TilbakeKl:
+            type: boolean
+          TillattSerie:
+            type: boolean
+          UtDagen:
+            type: boolean
+          VisAktivitetsmeny:
+            type: boolean
+          VisAvsnittKart:
+            type: boolean
+          VisKundeKart:
+            type: boolean
+          VisProduktivitet:
+            type: boolean
+          VisProsjektKart:
+            type: boolean
+          WebBg:
+            type: integer
+          WebFg:
+            type: integer
+          id:
+            type: integer
+        type: object
+    retriever:
+      type: SimpleRetriever
+      requester:
+        type: HttpRequester
+        url_base: https://api.tidsbanken.net/v2
+        path: http://api.tidsbanken.net/dev/Arbeidstyper/Finn
+        http_method: GET
+        request_parameters:
+          key: '{{ config[''api_key''] }}'
+        request_headers: {}
+        request_body_json: {}
+        authenticator:
+          type: ApiKeyAuthenticator
+          api_token: '{{ config[''api_key''] }}'
+          header: tb-key
+      record_selector:
+        type: RecordSelector
+        extractor:
+          type: DpathExtractor
+          field_path: []
+      paginator:
+        type: NoPagination
