--- a/airbyte-integrations/connectors-performance/source-harness/build.gradle
+++ b/airbyte-integrations/connectors-performance/source-harness/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
     implementation 'io.airbyte:airbyte-commons-worker:0.42.0'
-    implementation project(path: ':airbyte-config:config-models')
+    implementation 'io.airbyte.airbyte-config:config-models:0.42.0'
 }
