--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -4706,7 +4706,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-freshsales:0.1.2"
+- dockerImage: "airbyte/source-freshsales:0.1.3"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/freshsales"
     connectionSpecification:
@@ -4716,7 +4716,7 @@
       required:
       - "domain_name"
       - "api_key"
-      additionalProperties: false
+      additionalProperties: true
       properties:
         domain_name:
           type: "string"
