--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -139,10 +139,8 @@ jobs:
           kubectl get po
           POD=$(kubectl get pod -l app=source-harness -o jsonpath="{.items[0].metadata.name}")
           echo "pod name is $POD"
-          sleep 3
-          kubectl get events --sort-by=.metadata.creationTimestamp
-          kubectl logs $POD
-          kubectl describe $POD
+          #sleep 3
+          #kubectl get events --sort-by=.metadata.creationTimestamp
           kubectl wait --for=condition=Ready --timeout=20s "pod/$POD"
           kubectl logs --follow $POD
           echo "reading end of log"
