--- a/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
@@ -1,10 +1,13 @@
 # See [Connector Acceptance Tests](https://docs.airbyte.com/connector-development/testing-connectors/connector-acceptance-tests-reference)
 # for more information about how to configure these tests
 connector_image: airbyte/source-trello:dev
+test_strictness_level: "high"
 acceptance_tests:
   spec:
     tests:
       - spec_path: "source_trello/spec.json"
+        backward_compatibility_tests_config:
+          disable_for_version: 0.2.0
   connection:
     tests:
       - config_path: "secrets/config.json"
@@ -16,9 +19,16 @@ acceptance_tests:
       - config_path: "secrets/config.json"
         backward_compatibility_tests_config:
           disable_for_version: 0.1.6
+        backward_compatibility_tests_config:
+          disable_for_version: 0.2.0
   basic_read:
     tests:
       - config_path: "secrets/config.json"
+        expect_records:
+          path: "integration_tests/expected_records.jsonl"
+          extra_fields: no
+          exact_order: no
+          extra_records: yes
         empty_streams: []
   incremental:
     tests:
@@ -27,7 +37,7 @@ acceptance_tests:
         future_state:
           future_state_path: "integration_tests/abnormal_state.json"
         cursor_paths:
-          actions: ["date"]
+          actions: ["611aa586ef5f2c8e1deec8b6", "date"]
   full_refresh:
     tests:
       - config_path: "secrets/config.json"
