use connector image name

--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -129,7 +129,7 @@ jobs:
           echo "Loading harness image into kind" >> $GITHUB_STEP_SUMMARY
           kind load docker-image airbyte/source-harness:dev --name chart-testing
           echo "loading pod..."
-          kubectl create -f ./tools/bin/test-postgres-source-process.yaml
+          envsubst < ./tools/bin/test-postgres-source-process.yaml | kubectl create -f -
           echo "get pods..."
           kubectl get po
           POD=$(kubectl get pod -l app=source-harness -o jsonpath="{.items[0].metadata.name}")
