--- a/tools/bin/test-postgres-source-process.yaml
+++ b/tools/bin/test-postgres-source-process.yaml
@@ -8,7 +8,7 @@ spec:
   containers:
   - name: main
     image: airbyte/source-harness:dev
-    args: [$CONNECTOR_IMAGE_NAME]
+    args: ["$CONNECTOR_IMAGE_NAME"]
     volumeMounts:
       - name: secrets-volume
         mountPath: /airbyte/secrets
