--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -118,8 +118,8 @@ jobs:
       - name: Run harness
         id: run-harness
         shell: bash
-        env:
-          CONNECTOR_IMAGE_NAME: ${{ github.event.inputs.connector }}
+        #env:
+        #  CONNECTOR_IMAGE_NAME: ${{ github.event.inputs.connector }}
         run: |
           echo "Setting admin account permissions"
           kubectl apply -f ./tools/bin/admin-service-account.yaml
@@ -129,6 +129,7 @@ jobs:
           echo "Loading harness image into kind" >> $GITHUB_STEP_SUMMARY
           kind load docker-image airbyte/source-harness:dev --name chart-testing
           echo "loading pod..."
+          CONNECTOR_IMAGE_NAME=${{ github.event.inputs.connector }}
           envsubst < ./tools/bin/test-postgres-source-process.yaml | kubectl create -f -
           echo "get pods..."
           kubectl get po
