--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -129,7 +129,8 @@ jobs:
           echo "Loading harness image into kind" >> $GITHUB_STEP_SUMMARY
           kind load docker-image airbyte/source-harness:dev --name chart-testing
           echo "loading pod..."
-          CONNECTOR_IMAGE_NAME=${{ github.event.inputs.connector }}
+          conn=${{ github.event.inputs.connector }}
+          CONNECTOR_IMAGE_NAME=${conn/connectors/airbyte}:dev
           envsubst < ./tools/bin/test-postgres-source-process.yaml | kubectl create -f -
           echo "get pods..."
           kubectl get po
