use connector image name

--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -131,6 +131,7 @@ jobs:
           echo "loading pod..."
           CONNECTOR_IMAGE_NAME=${CONN/connectors/airbyte}:dev
           echo $CONNECTOR_IMAGE_NAME
+          envsubst < ./tools/bin/test-postgres-source-process.yaml
           envsubst < ./tools/bin/test-postgres-source-process.yaml | kubectl create -f -
           echo "get pods..."
           kubectl get po
