--- a/airbyte-integrations/connectors/source-yandex-metrica/source_yandex_metrica/spec.yaml
+++ b/airbyte-integrations/connectors/source-yandex-metrica/source_yandex_metrica/spec.yaml
@@ -24,7 +24,7 @@ connectionSpecification:
     start_date:
       title: Start Date
       type: string
-      description: UTC date and time in the format YYYY-MM-DD.
+      description: Starting point for your data replication, in format of "YYYY-MM-DD".
       pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}$
       format: date
       examples:
@@ -33,7 +33,7 @@ connectionSpecification:
     end_date:
       title: End Date
       type: string
-      description: UTC date and time in the format YYYY-MM-DD.
+      description: Starting point for your data replication, in format of "YYYY-MM-DD". If not provided will sync till most recent date.
       pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}$
       format: date
       examples:
